# delta_t

./: Makefile  pyproject.toml  requirements-dev.txt
src/deltat_t/: deltadate.py  lib.py
tests/: test_delta_t.py  test_time.py
